@@ -33,7 +33,7 @@ namespace KGySoft.Drawing.SkiaSharp.UnitTests
     {
         #region Properties
 
-        protected static bool SaveToFile => true;
+        protected static bool SaveToFile => false;
         private static bool AddTimestamp => true;
 
         #endregion
