@@ -1,8 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!--<TargetFrameworks>net462;netstandard2.0;netcoreapp3.0;net5.0</TargetFrameworks>-->
-    <TargetFrameworks>net462;netcoreapp3.0;net10.0</TargetFrameworks>
+    <TargetFrameworks>net462;netstandard2.0;netcoreapp3.0;net5.0</TargetFrameworks>
+    <!--<TargetFrameworks>net10.0</TargetFrameworks>-->
+
+    <!--For UnitTesting the .NET Standard version-->
+    <!--<TargetFrameworks>netstandard2.0</TargetFrameworks>-->
 
     <!--All targets including the ones dropped from the NuGet package. The project still should be able to be compiled with all of them. -->
     <!--<TargetFrameworks>net462;netstandard2.0;netcoreapp2.0;netcoreapp3.0;net5.0</TargetFrameworks>-->
@@ -52,7 +55,7 @@
 
   <!-- Release only package references -->
   <ItemGroup Condition="'$(Configuration)' == 'RELEASE'">
-    <PackageReference Include="KGySoft.Drawing.Core" Version="9.1.0" />
+    <PackageReference Include="KGySoft.Drawing.Core" Version="10.0.0-rc.1" />
   </ItemGroup>
 
   <ItemGroup>
