@@ -1,5 +1,4 @@
-﻿using System;
-using System.Reflection;
+﻿using System.Reflection;
 using System.Resources;
 using System.Runtime.CompilerServices;
 using System.Runtime.InteropServices;
@@ -15,7 +14,7 @@ using System.Security;
 #else
 [assembly: AssemblyConfiguration("Release")]
 #endif
-[assembly: System.Reflection.AssemblyCompany("KGy SOFT")]
+[assembly: AssemblyCompany("KGy SOFT")]
 [assembly: AssemblyProduct("KGy SOFT Drawing")]
 [assembly: AssemblyCopyright("Copyright © KGy SOFT. All rights reserved.")]
 [assembly: AssemblyTrademark("")]
@@ -29,9 +28,9 @@ using System.Security;
 // The following GUID is for the ID of the typelib if this project is exposed to COM
 [assembly: Guid("72496e38-047d-400c-9ba3-42dd61f6157f")]
 
-[assembly: AssemblyVersion("9.1.0.0")]
-[assembly: AssemblyFileVersion("9.1.0.0")]
-[assembly: AssemblyInformationalVersion("9.1.0")]
+[assembly: AssemblyVersion("10.0.0.0")]
+[assembly: AssemblyFileVersion("10.0.0.0")]
+[assembly: AssemblyInformationalVersion("10.0.0-rc.1")]
 
 [assembly: NeutralResourcesLanguage("en")]
 [assembly: InternalsVisibleTo("KGySoft.Drawing.SkiaSharp.UnitTest, PublicKey=00240000048000009400000006020000002400005253413100040000010001003928BADFAA8C02789566AB7AC64A59DCDE30B798589A68EF92CBB04C9DED3FCBFE41F644D424DCF82F8A13F9148D45EE15785450318388E01AA8C4CF645E81C772E39DCA0D14B33CF48167B70F5C34A0E7B763141ED3AFDDAD0373D9FCD2E153E78D201C5C4EB61DBBD586EC6291EABFBE11879865C3776088605FA8820387C2")]
